--- a/.config/sway/config
+++ b/.config/sway/config
@@ -319,10 +319,10 @@ mode "resize" {
 bindsym $Mod+r mode "resize"
 
 # Size
-bindsym Mod1+Up    resize shrink height 10 px or 1 ppt
-bindsym Mod1+Down  resize grow   height 10 px or 1 ppt
-bindsym Mod1+Left  resize shrink width  10 px or 1 ppt
-bindsym Mod1+Right resize grow   width  10 px or 1 ppt
+# bindsym Mod1+Up    resize shrink height 10 px or 1 ppt
+# bindsym Mod1+Down  resize grow   height 10 px or 1 ppt
+# bindsym Mod1+Left  resize shrink width  10 px or 1 ppt
+# bindsym Mod1+Right resize grow   width  10 px or 1 ppt
 
 # layout toggle
 bindsym Mod1+Tab layout toggle tabbed split
