--- a/.config/sway/config
+++ b/.config/sway/config
@@ -136,7 +136,7 @@ exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | $wob
 # disable acceleration for mice
 input "type:pointer" {
 	accel_profile flat
-	pointer_accel -0.2
+	pointer_accel 0
 }
 
 # keyboard layout and repeat settings
@@ -380,7 +380,8 @@ for_window [app_id="(?i)(?:input-remapper-gtk|keepassxc|wev|mpv|gcolor3|helvum|c
 for_window [app_id="org.gnome.Calendar"] floating enable, resize set height 600, resize set width 600
 for_window [app_id="org.gnome.Calculator"] floating enable, resize set height 600, resize set width 400
 for_window [app_id="discover-overlay"] floating enable, resize set height 800, resize set width 660
-for_window [app_id="(?i)firefox" title="^(?i)(?:about.*firefox|extension:|about tor browser)"] floating enable
+for_window [app_id="piper"] floating enable, resize set height 340, resize set width 980
+for_window [app_id="(?i)firefox" title="^(?i)(?:about firefox|extension:|about tor browser)"] floating enable
 for_window [app_id="(?i)firefox" title="(?i)sharing indicator"] floating enable, move position 0 0
 for_window [class="(?i)steam" title="^(?i)(?:steam guard|friends list|steam - news)"] floating enable
 for_window [class="(?i)steam" title="^(?i)steam - news"] floating enable, resize set height 830, resize set width 630
