Keep default mpv bindings commented

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -1,3 +1,18 @@
+WHEEL_UP      add volume 5
+WHEEL_DOWN    add volume -5
+WHEEL_LEFT    seek -10
+WHEEL_RIGHT   seek 10
+
+RIGHT seek +10
+LEFT  seek -10
+UP    add volume 10
+DOWN  add volume -10
+
+Shift+RIGHT seek  1
+Shift+LEFT  seek -1
+Shift+UP    add volume  5
+Shift+DOWN  add volume -5
+
 # mpv keybindings
 #
 # Location of user-defined bindings: ~/.config/mpv/input.conf
@@ -37,16 +52,16 @@
 # Mouse wheels, touchpad or other input devices that have axes
 # if the input devices supports precise scrolling it will also scale the
 # numeric value accordingly
-WHEEL_UP      add volume 5
-WHEEL_DOWN    add volume -5
-WHEEL_LEFT    seek -10
-WHEEL_RIGHT   seek 10
+#WHEEL_UP      seek 10          # seek 10 seconds forward
+#WHEEL_DOWN    seek -10         # seek 10 seconds backward
+#WHEEL_LEFT    add volume -2
+#WHEEL_RIGHT   add volume 2
 
 ## Seek units are in seconds, but note that these are limited by keyframes
-RIGHT seek +10
-LEFT seek -10
-DOWN add volume -10
-UP add volume 10
+#RIGHT seek  5                          # seek 5 seconds forward
+#LEFT  seek -5                          # seek 5 seconds backward
+#UP    seek  60                         # seek 1 minute forward
+#DOWN  seek -60                         # seek 1 minute backward
 # Do smaller, always exact (non-keyframe-limited), seeks with shift.
 # Don't show them on the OSD (no-osd).
 #Shift+RIGHT no-osd seek  1 exact       # seek exactly 1 second forward
