Update mpv configs

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -1,17 +1,27 @@
-WHEEL_UP      add volume 10
+WHEEL_UP      add volume +10
 WHEEL_DOWN    add volume -10
 WHEEL_LEFT    seek -10
-WHEEL_RIGHT   seek 10
+WHEEL_RIGHT   seek +10
 
 RIGHT seek +10
 LEFT  seek -10
-UP    add volume 10
+UP    add volume +10
 DOWN  add volume -10
 
-Shift+RIGHT seek  1
-Shift+LEFT  seek -1
-Shift+UP    add volume  5
+Shift+RIGHT seek +5
+Shift+LEFT  seek -5
+Shift+UP    add volume +5
 Shift+DOWN  add volume -5
+
+Ctrl+RIGHT seek +1
+Ctrl+LEFT  seek -1
+Ctrl+UP    add volume +1
+Ctrl+DOWN  add volume -1
+
+Alt+RIGHT add chapter +1
+Alt+LEFT  add chapter -1
+Alt+UP    ignore
+Alt+DOWN  ignore
 
 # mpv keybindings
 #
