--- a/.config/sway/config
+++ b/.config/sway/config
@@ -76,8 +76,6 @@ swaynag_command $nag -R
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec ~/.azotebg
 
-focus output HDMI-A-2
-
 ### Turn off screen on lid closed
 #set $laptop eDP-1
 #bindswitch lid:on output $laptop disable
@@ -316,14 +314,14 @@ for_window [class="(?i)(?:lxappearance)"] floating enable
 # for_window [app_id="(?i)(?:firefox|chromium)"] border none
 for_window [title="(?i)(?:copying|deleting|moving)"] floating enable
 
-for_window [app_id="(?i)(?:input-remapper-gtk|keepassxc|wev|mpv|gcolor3|helvum|characters|file-roller|zenity|catfish|lutris|io.github.celluloid_player.Celluloid)"] floating enable
+for_window [app_id="(?i)(?:input-remapper-gtk|keepassxc|wev|mpv|gcolor3|helvum|characters|file-roller|zenity|catfish|lutris|celluloid|protonvpn)"] floating enable
 for_window [app_id="org.gnome.Calendar"] floating enable, resize set width 600, resize set height 600
 for_window [app_id="org.gnome.Calculator"] floating enable, resize set width 400, resize set height 600
 for_window [app_id="discover-overlay"] floating enable, resize set width 660, resize set height 800
 for_window [app_id="piper"] floating enable, resize set width 980, resize set height 340
 for_window [app_id="(?i)firefox" title="^(?i)(?:about (?:.*firefox|tor browser)|extension:|page info)"] floating enable
 for_window [app_id="(?i)firefox" title="(?i)sharing indicator"] floating enable, move position 0 0
-for_window [class="(?i)steam" title="^(?i)(?:friends list|create or select|steam.*(?:guard|information|updater))"] floating enable
+for_window [class="(?i)steam"] floating enable
 for_window [class="(?i)steam" title="^(?i)steam - news"] floating enable, resize set width 630, resize set height 830
 for_window [app_id="thunar" title="^(?i)file operation"] floating enable
 for_window [app_id="python3" title="^(?i)Tor Browser Launcher Settings"] floating enable
