--- a/.config/pipewire/pipewire-pulse.conf
+++ b/.config/pipewire/pipewire-pulse.conf
@@ -1,7 +1,12 @@
-# PulseAudio config file for PipeWire version "0.3.42" #
+# PulseAudio config file for PipeWire version "0.3.52" #
 #
 # Copy and edit this file in /etc/pipewire for system-wide changes
 # or in ~/.config/pipewire for local changes.
+#
+# It is also possible to place a file with an updated section in
+# /etc/pipewire/pipewire-pulse.conf.d/ for system-wide changes or in
+# ~/.config/pipewire/pipewire-pulse.conf.d/ for local changes.
+#
 
 context.properties = {
     ## Configure properties in the system.
@@ -9,6 +14,8 @@ context.properties = {
     #mem.allow-mlock = true
     #mem.mlock-all   = false
     #log.level       = 2
+
+    #default.clock.quantum-limit = 8192
 }
 
 context.spa-libs = {
@@ -19,7 +26,7 @@ context.spa-libs = {
 context.modules = [
     { name = libpipewire-module-rtkit
         args = {
-            #nice.level   = -11
+            nice.level   = -11
             #rt.prio      = 88
             #rt.time.soft = 2000000
             #rt.time.hard = 2000000
@@ -33,26 +40,8 @@ context.modules = [
 
     { name = libpipewire-module-protocol-pulse
         args = {
-            # the addresses this server listens on
-            server.address = [
-                "unix:native"
-                #"unix:/tmp/something"              # absolute paths may be used
-                #"tcp:4713"                         # IPv4 and IPv6 on all addresses
-                #"tcp:[::]:9999"                    # IPv6 on all addresses
-                #"tcp:127.0.0.1:8888"               # IPv4 on a single address
-            ]
-            #pulse.min.req          = 256/48000     # 5ms
-            #pulse.default.req      = 960/48000     # 20 milliseconds
-            #pulse.min.frag         = 256/48000     # 5ms
-            #pulse.default.frag     = 96000/48000   # 2 seconds
-            #pulse.default.tlength  = 96000/48000   # 2 seconds
-            #pulse.min.quantum      = 256/48000     # 5ms
-            #pulse.default.format   = F32
-            #pulse.default.position = [ FL FR ]
-            # These overrides are only applied when running in a vm.
-            vm.overrides = {
-                pulse.min.quantum = 1024/48000      # 22ms
-            }
+	    # contents of pulse.properties can also be placed here
+	    # to have config per server.
         }
     }
 
@@ -68,7 +57,7 @@ context.modules = [
                 #media.class = Audio/Source
                 node.name = custom-loop0
                 node.description = "loop0 Out"
-                node.target = "alsa_output.pci-0000_09_00.3.analog-stereo"
+                node.target = "alsa_output.pci-0000_09_00.4.analog-stereo"
             }
         }
     }
@@ -85,42 +74,42 @@ context.modules = [
                 #media.class = Audio/Source
                 node.name = custom-loop1
                 node.description = "loop1 Out (Discord)"
-                node.target = "alsa_output.pci-0000_09_00.3.analog-stereo"
+                node.target = "alsa_output.pci-0000_09_00.4.analog-stereo"
             }
         }
     }
 
-    {   name = libpipewire-module-filter-chain
-        args = {
-            node.name =  "rnnoise_source"
-            node.description =  "Noise Canceling source"
-            media.name =  "Noise Canceling source"
-            filter.graph = {
-                nodes = [
-                    {
-                        type = ladspa
-                        name = rnnoise
-                        plugin = /usr/lib/ladspa/librnnoise_ladspa.so
-                        label = noise_suppressor_stereo
-                        control = {
-                            "VAD Threshold (%)" 50.0
-                        }
-                    }
-                ]
-            }
-            capture.props = {
-                node.passive = true
-            }
-            playback.props = {
-                media.class = Audio/Source
-            }
-        }
-    }
+    # {   name = libpipewire-module-filter-chain
+    #     args = {
+    #         node.name =  "rnnoise_source"
+    #         node.description =  "Noise Canceling source"
+    #         media.name =  "Noise Canceling source"
+    #         filter.graph = {
+    #             nodes = [
+    #                 {
+    #                     type = ladspa
+    #                     name = rnnoise
+    #                     plugin = /usr/lib/ladspa/librnnoise_ladspa.so
+    #                     label = noise_suppressor_stereo
+    #                     control = {
+    #                         "VAD Threshold (%)" 50.0
+    #                     }
+    #                 }
+    #             ]
+    #         }
+    #         capture.props = {
+    #             node.passive = true
+    #         }
+    #         playback.props = {
+    #             media.class = Audio/Source
+    #         }
+    #     }
+    # }
 ]
 
 # Extra modules can be loaded here. Setup in default.pa can be moved here
 context.exec = [
-    # { path = "/usr/bin/pipewire-pulse" args = "-c /usr/share/pipewire/filter-chain/source-rnnoise.conf" }
+    { path = "pactl"        args = "load-module module-always-sink" }
     #{ path = "pactl"        args = "load-module module-switch-on-connect" }
     #{ path = "/usr/bin/sh"  args = "~/.config/pipewire/default.pw" }
 ]
@@ -131,9 +120,91 @@ stream.properties = {
     resample.quality      = 10
     #channelmix.normalize  = false
     #channelmix.mix-lfe    = false
-    #channelmix.upmix      = false
-    #channelmix.lfe-cutoff = 0
+    #channelmix.upmix      = true
+    #channelmix.upmix-method = psd  # none, simple
+    #channelmix.lfe-cutoff = 150
+    #channelmix.fc-cutoff  = 12000
+    #channelmix.rear-delay = 12.0
+    #channelmix.stereo-widen = 0.0
+    #channelmix.hilbert-taps = 0
 }
+
+pulse.properties = {
+    # the addresses this server listens on
+    server.address = [
+        "unix:native"
+        #"unix:/tmp/something"              # absolute paths may be used
+        #"tcp:4713"                         # IPv4 and IPv6 on all addresses
+        #"tcp:[::]:9999"                    # IPv6 on all addresses
+        #"tcp:127.0.0.1:8888"               # IPv4 on a single address
+        #
+        #{ address = "tcp:4713"             # address
+        #  max-clients = 64                 # maximum number of clients
+        #  listen-backlog = 32              # backlog in the server listen queue
+        #  client.access = "restricted"     # permissions for clients
+        #}
+    ]
+    #pulse.min.req          = 256/48000     # 5ms
+    #pulse.default.req      = 960/48000     # 20 milliseconds
+    #pulse.min.frag         = 256/48000     # 5ms
+    #pulse.default.frag     = 96000/48000   # 2 seconds
+    #pulse.default.tlength  = 96000/48000   # 2 seconds
+    #pulse.min.quantum      = 256/48000     # 5ms
+    #pulse.default.format   = F32
+    #pulse.default.position = [ FL FR ]
+    # These overrides are only applied when running in a vm.
+    vm.overrides = {
+        pulse.min.quantum = 1024/48000      # 22ms
+    }
+}
+
+# client/stream specific properties
+pulse.rules = [
+    {
+        matches = [
+            {
+                # all keys must match the value. ~ starts regex.
+                #client.name                = "Firefox"
+                #application.process.binary = "teams"
+                #application.name           = "~speech-dispatcher.*"
+            }
+        ]
+        actions = {
+            update-props = {
+                #node.latency = 512/48000
+            }
+            # Possible quirks:"
+            #    force-s16-info                 forces sink and source info as S16 format
+            #    remove-capture-dont-move       removes the capture DONT_MOVE flag
+            #quirks = [ ]
+        }
+    }
+    {
+        # skype does not want to use devices that don't have an S16 sample format.
+        matches = [
+             { application.process.binary = "teams" }
+             { application.process.binary = "teams-insiders" }
+             { application.process.binary = "skypeforlinux" }
+        ]
+        actions = { quirks = [ force-s16-info ] }
+    }
+    {
+        # firefox marks the capture streams as don't move and then they
+        # can't be moved with pavucontrol or other tools.
+        matches = [ { application.process.binary = "firefox" } ]
+        actions = { quirks = [ remove-capture-dont-move ] }
+    }
+    {
+        # speech dispatcher asks for too small latency and then underruns.
+        matches = [ { application.name = "~speech-dispatcher*" } ]
+        actions = {
+            update-props = {
+                pulse.min.req          = 1024/48000     # 21ms
+                pulse.min.quantum      = 1024/48000     # 21ms
+            }
+        }
+    }
+]
 
 #context.objects = [
 #    {   factory = adapter
