--- a/.config/discover_overlay/config.ini
+++ b/.config/discover_overlay/config.ini
@@ -9,15 +9,15 @@ avatar_size = 48
 icon_spacing = 8
 text_padding = 6
 square_avatar = 0
-only_speaking = 0
+only_speaking = 1
 highlight_self = 0
 icon_only = 0
 monitor = LG FULL HD
 vert_edge_padding = 0
 horz_edge_padding = 0
 floating = 1
-floating_x = 28
-floating_y = 29
+floating_x = 30
+floating_y = 30
 floating_w = 400
 floating_h = 400
 order = 0
@@ -26,4 +26,6 @@ fg_hi_col = [1.0, 1.0, 1.0, 1.0]
 text_baseline_adj = 0
 horizontal = False
 guild_ids = 
+bo_col = [0.0, 0.0, 0.0, 0.0]
+overflow = 0
 
