--- a/.config/pipewire/pipewire-pulse.conf
+++ b/.config/pipewire/pipewire-pulse.conf
@@ -45,39 +45,39 @@ context.modules = [
         }
     }
 
-    {   name = libpipewire-module-loopback
-        args = {
-            audio.position = [ FL FR ]
-            capture.props = {
-                media.class = Audio/Sink
-                node.name = custom-loop0
-                node.description = "loop0 In"
-            }
-            playback.props = {
-                #media.class = Audio/Source
-                node.name = custom-loop0
-                node.description = "loop0 Out"
-                node.target = "alsa_output.pci-0000_09_00.4.analog-stereo"
-            }
-        }
-    }
+    # {   name = libpipewire-module-loopback
+    #     args = {
+    #         audio.position = [ FL FR ]
+    #         capture.props = {
+    #             media.class = Audio/Sink
+    #             node.name = custom-loop0
+    #             node.description = "loop0 In"
+    #         }
+    #         playback.props = {
+    #             #media.class = Audio/Source
+    #             node.name = custom-loop0
+    #             node.description = "loop0 Out"
+    #             node.target = "alsa_output.pci-0000_09_00.4.analog-stereo"
+    #         }
+    #     }
+    # }
 
-    {   name = libpipewire-module-loopback
-        args = {
-            audio.position = [ FL FR ]
-            capture.props = {
-                media.class = Audio/Sink
-                node.name = custom-loop1
-                node.description = "loop1 In (Discord)"
-            }
-            playback.props = {
-                #media.class = Audio/Source
-                node.name = custom-loop1
-                node.description = "loop1 Out (Discord)"
-                node.target = "alsa_output.pci-0000_09_00.4.analog-stereo"
-            }
-        }
-    }
+    # {   name = libpipewire-module-loopback
+    #     args = {
+    #         audio.position = [ FL FR ]
+    #         capture.props = {
+    #             media.class = Audio/Sink
+    #             node.name = custom-loop1
+    #             node.description = "loop1 In"
+    #         }
+    #         playback.props = {
+    #             #media.class = Audio/Source
+    #             node.name = custom-loop1
+    #             node.description = "loop1 Out"
+    #             node.target = "alsa_output.pci-0000_09_00.4.analog-stereo"
+    #         }
+    #     }
+    # }
 
     # {   name = libpipewire-module-filter-chain
     #     args = {
