--- a/.config/sway/config
+++ b/.config/sway/config
@@ -287,6 +287,7 @@ bindsym $Mod+Shift+f fullscreen
 # move help to front/back
 # bindsym Mod1+Shift+h exec pkill -f -10 nwg-wrapper
 
+bindsym $Mod+Shift+p sticky toggle
 
 ###############      Border & Gaps     ###############
 
@@ -335,5 +336,8 @@ popup_during_fullscreen smart
 # clipman
 exec wl-paste -t text --watch $HOME/.config/sway/clipman.sh
 bindsym $Mod+Control+c exec clipman pick -t wofi
+
+# loopbacks
+exec $HOME/.config/sway/loopback.sh
 
 include /etc/sway/config.d/*
