--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -4,7 +4,7 @@
   "timeout": 10,
   "timeout-low": 5,
   "timeout-critical": 0,
-  "notification-window-width": 400,
+  "notification-window-width": 500,
   "keyboard-shortcuts": true,
   "image-visibility": "always",
   "transition-time": 200,
@@ -13,5 +13,6 @@
   "control-center-margin-top": 0,
   "control-center-margin-bottom": 0,
   "control-center-margin-right": 0,
-  "control-center-margin-left": 0
+  "control-center-margin-left": 0,
+  "control-center-width": 500
 }
