--- a/.config/sway/config
+++ b/.config/sway/config
@@ -315,7 +315,7 @@ for_window [class="(?i)(?:lxappearance)"] floating enable
 # for_window [app_id="(?i)(?:firefox|chromium)"] border none
 for_window [title="(?i)(?:copying|deleting|moving)"] floating enable
 
-for_window [app_id="(?i)(?:input-remapper-gtk|keepassxc|wev|mpv|gcolor3|helvum|characters|file-roller|zenity|catfish|lutris|celluloid|protonvpn)"] floating enable
+for_window [app_id="(?i)(?:input-remapper-gtk|keepassxc|wev|mpv|gcolor3|helvum|characters|file-roller|zenity|catfish|lutris|celluloid|protonvpn|github\.fstl)"] floating enable
 for_window [app_id="org.gnome.Calendar"] floating enable, resize set width 600, resize set height 600
 for_window [app_id="org.gnome.Calculator"] floating enable, resize set width 400, resize set height 600
 for_window [app_id="discover-overlay"] floating enable, resize set width 660, resize set height 800
